force-app/main/default/objects/ExtraService__c/ExtraService__c.object-meta.xml
<CustomObject>
    <label>부가서비스 내역</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Extra Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>