force-app/main/default/objects/ExtraService__c/fields/AboutAddress__c.field-meta.xml
<CustomField>
    <fullName>AboutAddress__c</fullName>
    <defaultValue>$Label.AboutAddress</defaultValue>
    <label>About Address</label>
    <type>TextArea</type>
</CustomField>