force-app/main/default/objects/ExtraService__c/fields/AboutDate__c.field-meta.xml
<CustomField>
    <fullName>AboutDate__c</fullName>
    <defaultValue>$Label.AboutDate</defaultValue>
    <label>About Date</label>
    <type>TextArea</type>
</CustomField>