force-app/main/default/objects/ExtraService__c/fields/AddressDetail__c.field-meta.xml
<CustomField>
    <fullName>AddressDetail__c</fullName>
    <label>Address Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>