force-app/main/default/objects/ExtraService__c/fields/ApplicantsNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicantsNumber__c</fullName>
    <label>Applicants Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>