force-app/main/default/objects/ExtraService__c/fields/AuthorizedCapacity__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedCapacity__c</fullName>
    <label>AuthorizedCapacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>