force-app/main/default/objects/ExtraService__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SH</fullName>
                <label>서비스/힐링</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>위생컨설팅</label>
            </value>
            <value>
                <fullName>영양교육</fullName>
            </value>
            <value>
                <fullName>쿠킹클래스</fullName>
            </value>
            <value>
                <fullName>영양+쿠킹클래스</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>쿠킹/세미나</label>
            </value>
            <value>
                <fullName>NH</fullName>
                <label>영양/건강/위생</label>
            </value>
            <value>
                <fullName>쉐프가 간다</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>