force-app/main/default/objects/ExtraService__c/fields/ChefRole__c.field-meta.xml
<CustomField>
    <fullName>ChefRole__c</fullName>
    <label>ChefRole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>조리사</fullName>
            </value>
            <value>
                <fullName>조리보조</fullName>
            </value>
            <value>
                <fullName>보조</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>