force-app/main/default/objects/ExtraService__c/fields/ClassDetailInfo__c.field-meta.xml
<CustomField>
    <fullName>ClassDetailInfo__c</fullName>
    <label>ClassDetailInfo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>