force-app/main/default/objects/ExtraService__c/fields/ClassRemark__c.field-meta.xml
<CustomField>
    <fullName>ClassRemark__c</fullName>
    <defaultValue>$Label.EducationRemark</defaultValue>
    <label>Class Remark</label>
    <type>TextArea</type>
</CustomField>