force-app/main/default/objects/ExtraService__c/fields/ClassRuningNumber__c.field-meta.xml
<CustomField>
    <fullName>ClassRuningNumber__c</fullName>
    <label>ClassRuningNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>