force-app/main/default/objects/ExtraService__c/fields/Complete_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Complete_Cancel__c</fullName>
    <label>Complete/Cancel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>완료</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>