force-app/main/default/objects/ExtraService__c/fields/CookingClassCaution__c.field-meta.xml
<CustomField>
    <fullName>CookingClassCaution__c</fullName>
    <defaultValue>$Label.CookingClassCaution</defaultValue>
    <label>CookingClassCaution</label>
    <type>TextArea</type>
</CustomField>