force-app/main/default/objects/ExtraService__c/fields/CustomerAgeGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerAgeGroup__c</fullName>
    <label>Customer age group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TargetGroup__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>3세이하</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4세</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5세</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6세</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7세</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>