force-app/main/default/objects/ExtraService__c/fields/ExtraRemark__c.field-meta.xml
<CustomField>
    <fullName>ExtraRemark__c</fullName>
    <defaultValue>$Label.ExtraRemark</defaultValue>
    <label>Extra Remark</label>
    <type>TextArea</type>
</CustomField>