force-app/main/default/objects/ExtraService__c/fields/ExtraServiceName__c.field-meta.xml
<CustomField>
    <fullName>ExtraServiceName__c</fullName>
    <formula>Text(ServiceDate__c) &amp; Text( DateValue(ServiceStartDateTime__c)) &amp; &quot;/&quot; &amp; Text(ChefRole__c) &amp; Text(Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Service Name</label>
    <type>Text</type>
</CustomField>