force-app/main/default/objects/ExtraService__c/fields/fm_ClassName__c.field-meta.xml
<CustomField>
    <fullName>fm_ClassName__c</fullName>
    <formula>ServiceContents__r.Name</formula>
    <label>fm_ClassName</label>
    <type>Text</type>
</CustomField>