force-app/main/default/objects/ExtraService__c/fields/fm_IsInstructor__c.field-meta.xml
<CustomField>
    <fullName>fm_IsInstructor__c</fullName>
    <formula>IF( Instructor__r.Id =  $User.Id , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>IsInstructor</label>
    <type>Text</type>
</CustomField>