force-app/main/default/objects/ExtraService__c/fields/fm_MyClass__c.field-meta.xml
<CustomField>
    <fullName>fm_MyClass__c</fullName>
    <formula>if( Instructor__r.Id = $User.Id , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>MyClass</label>
    <type>Text</type>
</CustomField>