force-app/main/default/objects/ExtraService__c/fields/fm_Owner__c.field-meta.xml
<CustomField>
    <fullName>fm_Owner__c</fullName>
    <formula>if( $User.Id =  OwnerId , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>fm_Owner</label>
    <type>Text</type>
</CustomField>