force-app/main/default/objects/ExtraService__c/fields/fm_RecordLink__c.field-meta.xml
<CustomField>
    <fullName>fm_RecordLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, Text(ServiceDate__c) &amp; Text( DateValue(ServiceStartDateTime__c)) &amp; &quot;/&quot; &amp; Text(ChefRole__c) &amp; Text(Category__c) &amp; Text( ServiceCategory__c) , &quot;_self&quot;)</formula>
    <label>fm_RecordLink</label>
    <type>Text</type>
</CustomField>