force-app/main/default/objects/ExtraService__c/fields/fm_SchoolType__c.field-meta.xml
<CustomField>
    <fullName>fm_SchoolType__c</fullName>
    <formula>Text(Customer__r.SchoolType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Type</label>
    <type>Text</type>
</CustomField>