force-app/main/default/objects/ExtraService__c/fields/fm_ServiceEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>fm_ServiceEndDateTime__c</fullName>
    <formula>ServiceStartDateTime__c + ( ProgressTime__c / 24 )</formula>
    <label>Service End DateTime</label>
    <type>DateTime</type>
</CustomField>