force-app/main/default/objects/ExtraService__c/fields/GroupMealAge__c.field-meta.xml
<CustomField>
    <fullName>GroupMealAge__c</fullName>
    <label>Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>