force-app/main/default/objects/ExtraService__c/fields/Instructor3__c.field-meta.xml
<CustomField>
    <fullName>Instructor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExtraService1</relationshipName>
    <type>Lookup</type>
</CustomField>