force-app/main/default/objects/ExtraService__c/fields/MenuProduct__c.field-meta.xml
<CustomField>
    <fullName>MenuProduct__c</fullName>
    <label>Menu&amp;Product</label>
    <type>TextArea</type>
</CustomField>