force-app/main/default/objects/ExtraService__c/fields/MultiDate__c.field-meta.xml
<CustomField>
    <fullName>MultiDate__c</fullName>
    <label>MultiDate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>