force-app/main/default/objects/ExtraService__c/fields/NoofMeal__c.field-meta.xml
<CustomField>
    <fullName>NoofMeal__c</fullName>
    <label>No of Meals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>