force-app/main/default/objects/ExtraService__c/fields/NutritionClassCaution__c.field-meta.xml
<CustomField>
    <fullName>NutritionClassCaution__c</fullName>
    <defaultValue>$Label.NutritionClass</defaultValue>
    <label>NutritionClassCaution</label>
    <type>TextArea</type>
</CustomField>