force-app/main/default/objects/ExtraService__c/fields/OnlineOffline__c.field-meta.xml
<CustomField>
    <fullName>OnlineOffline__c</fullName>
    <label>Online/Offline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>