force-app/main/default/objects/ExtraService__c/fields/OtherNote__c.field-meta.xml
<CustomField>
    <fullName>OtherNote__c</fullName>
    <label>OtherNote</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>