force-app/main/default/objects/ExtraService__c/fields/ProgressTime__c.field-meta.xml
<CustomField>
    <fullName>ProgressTime__c</fullName>
    <label>Progress Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>