force-app/main/default/objects/ExtraService__c/fields/QuarterOpenDate__c.field-meta.xml
<CustomField>
    <fullName>QuarterOpenDate__c</fullName>
    <formula>CASE(
     MONTH(ServiceContents__r.OpenDate__c), 
     1, Date(Year(ServiceContents__r.OpenDate__c),01,01),
     2, Date(Year(ServiceContents__r.OpenDate__c),01,01),
     3, Date(Year(ServiceContents__r.OpenDate__c),01,01),
     4, Date(Year(ServiceContents__r.OpenDate__c),04,01),
     5, Date(Year(ServiceContents__r.OpenDate__c),04,01),
     6, Date(Year(ServiceContents__r.OpenDate__c),04,01),
     7, Date(Year(ServiceContents__r.OpenDate__c),07,01),
     8, Date(Year(ServiceContents__r.OpenDate__c),07,01),
     9, Date(Year(ServiceContents__r.OpenDate__c),07,01),
     10, Date(Year(ServiceContents__r.OpenDate__c),10,01),
     11, Date(Year(ServiceContents__r.OpenDate__c),10,01),
     12, Date(Year(ServiceContents__r.OpenDate__c),10,01), 
     null
)</formula>
    <label>Quarter Open Date</label>
    <type>Date</type>
</CustomField>