force-app/main/default/objects/ExtraService__c/fields/RequestPurpose__c.field-meta.xml
<CustomField>
    <fullName>RequestPurpose__c</fullName>
    <label>Request Purpose</label>
    <type>TextArea</type>
</CustomField>