force-app/main/default/objects/ExtraService__c/fields/RequiredItem__c.field-meta.xml
<CustomField>
    <fullName>RequiredItem__c</fullName>
    <label>Required Item</label>
    <type>TextArea</type>
</CustomField>