force-app/main/default/objects/ExtraService__c/fields/RequiredProperty__c.field-meta.xml
<CustomField>
    <fullName>RequiredProperty__c</fullName>
    <defaultValue>$Label.RequiredProperty</defaultValue>
    <label>Required Property</label>
    <type>TextArea</type>
</CustomField>