force-app/main/default/objects/ExtraService__c/fields/SaleAmount__c.field-meta.xml
<CustomField>
    <fullName>SaleAmount__c</fullName>
    <label>Sales Amount</label>
    <type>TextArea</type>
</CustomField>