force-app/main/default/objects/ExtraService__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>