force-app/main/default/objects/ExtraService__c/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>ServiceCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>간식지원</fullName>
            </value>
            <value>
                <fullName>기물지원</fullName>
            </value>
            <value>
                <fullName>기물대여</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>