force-app/main/default/objects/ExtraService__c/fields/ServiceContents__c.field-meta.xml
<CustomField>
    <fullName>ServiceContents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contents</label>
    <referenceTo>ServiceContents__c</referenceTo>
    <relationshipName>ExtraServiceContents</relationshipName>
    <type>Lookup</type>
</CustomField>