force-app/main/default/objects/ExtraService__c/fields/ServiceDivision__c.field-meta.xml
<CustomField>
    <fullName>ServiceDivision__c</fullName>
    <label>ServiceDivision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>강사 교육</fullName>
            </value>
            <value>
                <fullName>대체조리사</fullName>
            </value>
            <value>
                <fullName>간식&amp;물품 지원</fullName>
            </value>
            <value>
                <fullName>셰프가 간다.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>