force-app/main/default/objects/ExtraService__c/fields/ServiceStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartDateTime__c</fullName>
    <label>Service Start DateTime</label>
    <type>DateTime</type>
</CustomField>