force-app/main/default/objects/ExtraService__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <default>true</default>
                <label>임시저장</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>접수</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>승인</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>반려</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>완료</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>