force-app/main/default/objects/ExtraService__c/fields/TargetGroup__c.field-meta.xml
<CustomField>
    <fullName>TargetGroup__c</fullName>
    <label>Target Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>원장</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>어린이</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>교직원</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>학부모</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>학부모참여</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>기타</label>
            </value>
            <value>
                <fullName>실버</fullName>
            </value>
            <value>
                <fullName>보육원성인</fullName>
            </value>
            <value>
                <fullName>보육원</fullName>
            </value>
            <value>
                <fullName>지적장애인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>