force-app/main/default/objects/ExtraService__c/fields/TotalDate__c.field-meta.xml
<CustomField>
    <fullName>TotalDate__c</fullName>
    <label>TotalDate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>