force-app/main/default/objects/ExtraService__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>부가서비스 신청 불가 시 Validation Check에 이용되는 필드</description>
    <label>Validation</label>
    <type>Checkbox</type>
</CustomField>