force-app/main/default/objects/ExtraService__c/fields/Validation_Exceed_Apply__c.field-meta.xml
<CustomField>
    <fullName>Validation_Exceed_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Exceed Apply</label>
    <type>Checkbox</type>
</CustomField>