force-app/main/default/objects/ExtraService__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>IF ( Year(DateValue(ServiceStartDateTime__c)) = Year(TODAY()) , &quot;Current Year&quot; , IF ( Year(DateValue(ServiceStartDateTime__c)) = (Year(TODAY())- 1 ) , &quot;Last Year&quot; , &quot; &quot; ))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>