force-app/main/default/objects/ExtraService__c/recordTypes/CommoditySupport.recordType-meta.xml
<RecordType>
    <fullName>CommoditySupport</fullName>
    <active>true</active>
    <label>간식&amp;물품 지원</label>
</RecordType>