force-app/main/default/objects/ExtraService__c/recordTypes/GroupMealExtraService.recordType-meta.xml
<RecordType>
    <fullName>GroupMealExtraService</fullName>
    <active>true</active>
    <label>GroupMealExtraService</label>
</RecordType>