force-app/main/default/objects/ExtraService__c/recordTypes/HealthyNuriExtraService.recordType-meta.xml
<RecordType>
    <fullName>HealthyNuriExtraService</fullName>
    <active>true</active>
    <label>HealthyNuriExtraService</label>
</RecordType>