force-app/main/default/objects/ExtraService__c/recordTypes/I_NuriExtraService.recordType-meta.xml
<RecordType>
    <fullName>I_NuriExtraService</fullName>
    <active>true</active>
    <label>I-NuriExtraService</label>
</RecordType>