force-app/main/default/objects/ExtraService__c/recordTypes/SchoolChefExtraService.recordType-meta.xml
<RecordType>
    <fullName>SchoolChefExtraService</fullName>
    <active>true</active>
    <label>SchoolChefExtraService</label>
</RecordType>