force-app/main/default/objects/ExtraService__c/recordTypes/SubstituteChefApplicant.recordType-meta.xml
<RecordType>
    <fullName>SubstituteChefApplicant</fullName>
    <active>true</active>
    <label>대체조리사</label>
</RecordType>