force-app/main/default/objects/ExtraService__c/validationRules/ApplicationPossibleValidCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationPossibleValidCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Validation__c = TRUE</errorConditionFormula>
    <errorMessage>강사의 일정과 중복되어 신청 불가하는 시간대입니다. 다른 일정 잡아주세요</errorMessage>
</ValidationRule>