force-app/main/default/objects/ExtraService__c/validationRules/CheckApplicationDate_Cooking.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckApplicationDate_Cooking</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ADDMONTHS(DATEVALUE(ServiceStartDateTime__c),2)  &lt; QuarterOpenDate__c, Text(Category__c) = &quot;쿠킹클래스&quot;)</errorConditionFormula>
    <errorMessage>쿠킹클래스  컨텐츠는 오픈분기 2개월전부터 신청 가능합니다.</errorMessage>
</ValidationRule>