force-app/main/default/objects/ExtraService__c/validationRules/ExceedCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ExceedCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Validation_Exceed_Apply__c = TRUE</errorConditionFormula>
    <errorMessage>신청 불가합니다</errorMessage>
</ValidationRule>